--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -5,7 +5,7 @@
 <!--tabs-->
 <button title="Character" name="act_tab_character" type="action">character</button>
 <button title="Ark" name="act_tab_ark" type="action">ark</button>
-<div class="logo"><img alt="Mutant Year Zero" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-new/Mutant%20Year%20Zero/images/logo.png"></div>
+<div class="logo"><img alt="Mutant Year Zero" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/logo.png"></div>
 
 <div class="wrapper tab-content character">
     <div class="box character-details">
@@ -121,22 +121,28 @@
         <div class="box character-appearance">
             <div class="appearance-grid">
                 <div class="appearance-box1 header"><h1 data-i18n="appearance-u">APPEARANCE</h1></div>
-                <input class="display" name="attr_appearence_reveal" type="hidden" value="face,body,clothing," />
-                <div class="appearance-box2"><span class="label" data-i18n="face">Face</span></div>
-                <div class="appearance-box3">
+                <input class="display" name="attr_appearence_reveal" type="hidden" value="display,face,body,clothing," />
+                <div class="appearance-box2">
                     <button class="toggles" name="act_settings_face" type="action">y</button>
+                    <span class="label" data-i18n="face">Face</span>
+                </div>
+                <div class="appearance-box3">
                     <span name="attr_face"></span>
                     <textarea class="input-textarea" name="attr_face" title="@{face}"></textarea>
                 </div>
-                <div class="appearance-box4"><span class="label" data-i18n="body">Body</span></div>
-                <div class="appearance-box5">
+                <div class="appearance-box4">
                     <button class="toggles" name="act_settings_body" type="action">y</button>
+                    <span class="label" data-i18n="body">Body</span>
+                </div>
+                <div class="appearance-box5">
                     <span name="attr_body"></span>
                     <textarea class="input-textarea" name="attr_body" title="@{body}"></textarea>
                 </div>
-                <div class="appearance-box6"><span class="label" data-i18n="clothing">Clothing</span></div>
-                <div class="appearance-box7">
+                <div class="appearance-box6">
                     <button class="toggles" name="act_settings_clothing" type="action">y</button>
+                    <span class="label" data-i18n="clothing">Clothing</span>
+                </div>
+                <div class="appearance-box7">
                     <span name="attr_clothing"></span>
                     <textarea class="input-textarea" name="attr_clothing" title="@{clothing}"></textarea>
                 </div>
@@ -149,30 +155,28 @@
                 </div>		
                 <div class="injuries-box7">
                     <fieldset class="repeating_injuries">
-                        <button class="toggles" name="act_settings" type="action">y</button>
+                        <button class="toggles toggles-repeating" name="act_settings" type="action">y</button>
                         <input class="display" name="attr_reveal" type="hidden" value="display,settings," />
                         <div class="display">
                             <span name="attr_injury_name"></span>
                             <span name="attr_injury_display"></span>
                         </div>
-                        <div class="settings">
-                            <div class="injuries-grid">
-                                <label class="injuries-box2" data-i18n="injury">Injury</label>
-                                <input type="text" class="injuries-box8 input" name="attr_injury_name" placeholder="Broken Leg" title="@{repeating_injuries_$X_injury_name}" value="" />
-                                <label class="injuries-box3">Lethal</label>
-                                <select class="injuries-box9 input" name="attr_injury_lethal" title="@{repeating_injuries_$X_injury_lethal}" value="">
-                                    <option value="no" data-i18n="no">No</option>
-                                    <option value="yes" data-i18n="yes">Yes</option>
-                                    <option value="yes -1" data-i18n="yes-1">Yes,-1</option>
-                                    <option value="" data-i18n="not-applicable-abbr" selected>-</option>
-                                </select>
-                                <label class="injuries-box4" data-i18n="time-limit">Time Limit</label>
-                                <input type="text" class="injuries-box10 input" name="attr_injury_time_limit" placeholder="-" title="@{repeating_injuries_$X_injury_time_limit}" value="" />
-                                <label class="injuries-box5" data-i18n="effects">Effects</label>
-                                <input type="text" class="injuries-box11 input" name="attr_injury_effects" placeholder="−2 to Move and Sneak." title="@{repeating_injuries_$X_injury_effects}" value="" />
-                                <label class="injuries-box6" data-i18n="healing-time">Heal Time</label>
-                                <input type="text" class="injuries-box12 input" name="attr_injury_heal_time" placeholder="3d6" title="@{repeating_injuries_$X_injury_heal_time}" value="" />
-                            </div>
+                        <div class="grid settings injuries-grid">
+                            <label class="injuries-box2" data-i18n="injury">Injury</label>
+                            <input type="text" class="injuries-box8 input" name="attr_injury_name" placeholder="Broken Leg" title="@{repeating_injuries_$X_injury_name}" value="" />
+                            <label class="injuries-box3">Lethal</label>
+                            <select class="injuries-box9 input" name="attr_injury_lethal" title="@{repeating_injuries_$X_injury_lethal}" value="">
+                                <option value="no" data-i18n="no">No</option>
+                                <option value="yes" data-i18n="yes">Yes</option>
+                                <option value="yes -1" data-i18n="yes-1">Yes,-1</option>
+                                <option value="" data-i18n="not-applicable-abbr" selected>-</option>
+                            </select>
+                            <label class="injuries-box4" data-i18n="time-limit">Time Limit</label>
+                            <input type="text" class="injuries-box10 input" name="attr_injury_time_limit" placeholder="-" title="@{repeating_injuries_$X_injury_time_limit}" value="" />
+                            <label class="injuries-box5" data-i18n="effects">Effects</label>
+                            <input type="text" class="injuries-box11 input" name="attr_injury_effects" placeholder="−2 to Move and Sneak." title="@{repeating_injuries_$X_injury_effects}" value="" />
+                            <label class="injuries-box6" data-i18n="healing-time">Heal Time</label>
+                            <input type="text" class="injuries-box12 input" name="attr_injury_heal_time" placeholder="3d6" title="@{repeating_injuries_$X_injury_heal_time}" value="" />
                         </div>
                     </fieldset>
                 </div>
@@ -274,7 +278,7 @@
                 <fieldset class="repeating_skills">
                     <input class="display" name="attr_reveal" type="hidden" value="display,settings," />
                     <div class="repeating-skill-grid">
-                        <button class="toggles" name="act_settings" type="action">y</button>
+                        <button class="toggles toggles-repeating" name="act_settings" type="action">y</button>
                         <button type="action" name="act_dice_pool_skill"><span name="attr_name"></span></button>
                         <input class="input-number" type="number" name="attr_skill" value="0" min="0" title="@{skill}" />
                         <select name="skill_attribute">
@@ -393,8 +397,8 @@
                 <div class="talents-box4">
                     <fieldset class="repeating_talents">
                         <input class="display" name="attr_reveal" type="hidden" value="display,settings,collapse," />
-                        <div class="talents-grid">
-                            <button class="toggles" name="act_settings" type="action">y</button>
+                        <div class="grid talents-grid">
+                            <button class="toggles toggles-repeating" name="act_settings" type="action">y</button>
                             <button class="collapse" name="act_collapse" type="action">
                                 <span name="attr_talent_name" title="Talent name"></span>
                             </button>
@@ -402,7 +406,7 @@
                             <span name="attr_talent_rank" title="Talent rank"></span>
                             <span class="collapsible" name="attr_talent_description"></span>
                         </div>
-                        <div class="talents-grid settings">
+                        <div class="grid talents-grid settings">
                             <input class="talents-box1 input" type="text" name="attr_talent_name" value="" title="@{repeating_talents_$X_talent_name}" placeholder="Name" />
                             <select class="talents-box2 input" name="attr_talent_type" title="@{repeating_talents_$X_talent_type}">
                                 <option value="Gen" data-i18n="general" selected>General</option>
@@ -432,14 +436,14 @@
                 <div class="talents-box4">
                     <fieldset class="repeating_mutantions">
                         <input class="display" name="attr_reveal" type="hidden" value="display,settings,collapse," />
-                        <div class="mutantions-grid">
-                            <button class="toggles" name="act_settings" type="action">y</button>
+                        <div class="grid mutantions-grid">
+                            <button class="toggles toggles-repeating" name="act_settings" type="action">y</button>
                             <button class="collapse" name="act_collapse" type="action">
                                 <span name="attr_mutantion_name" title="Mutant Power name"></span>
                             </button>
                              <span class="collapsible" name="attr_mutantion_description"></span>
                         </div>
-                        <div class="mutantions-grid settings">
+                        <div class="grid mutantions-grid settings">
                             <input class="talents-box1 input" type="text" name="attr_mutantion_name" value="" title="@{repeating_mutantions_$X_mutantion_name}" placeholder="Name" />
                             <textarea class="talents-box4 input-textarea" name="attr_mutantion_description" title="@{repeating_mutantions_$X_mutantion_description}" placeholder="description"></textarea>
                         </div>
@@ -585,17 +589,19 @@
                 <div class="gear-box3 column-header"><span class="small-caps" data-i18n="carried-abbr">Carr</span></div>
                 <div class="gear-box4 column-header"><span class="small-caps" data-i18n="weight-abbr">Wt</span></div>
                 <div class="gear-box5">
-                    <input class="display" name="attr_reveal" type="hidden" value="display,settings," />
                     <fieldset class="repeating_gear">
-                        <div class="gear-grid">
-                            <button class="toggles" name="act_settings" type="action">y</button>
-                            <span name="attr_gear_name"></span>
+                        <input class="display" name="attr_reveal" type="hidden" value="display,settings," />
+                        <div class="grid gear-grid">
+                            <button class="toggles toggles-repeating" name="act_settings" type="action">y</button>
+                            <button class="collapse" name="act_collapse" type="action">
+                                <span name="attr_gear_name"></span>
+                            </button>
                             <span name="attr_gear_qty"></span>
                             <span name="attr_gear_carried"></span>
                             <span name="attr_gear_weight"></span>
                             <span class="collapsible" name="attr_gear_description"></span>
                         </div>
-                        <div class="settings gear-grid">
+                        <div class="grid settings gear-grid">
                             <input class="gear-box1 input" type="text" name="attr_gear_name" value="" title="@{repeating_gear_$X_gear_name}" placeholder="item" />
                             <input class="gear-box2 input-number" type="number" name="attr_gear_qty" value="1" min="0" title="@{repeating_gear_$X_gear_qty}" />
                             <input class="gear-box3 input" type="checkbox" name="attr_gear_carried" value="1" title="@{repeating_gear_$X_gear_carried}" checked />
@@ -630,18 +636,28 @@
                 <div class="vehicle_gear-box4 column-header"><span class="small-caps" data-i18n="weight-abbr" >Wt</span></div>
                 <div class="vehicle_gear-box5">
                     <fieldset class="repeating_vehicle">
-                        <div class="vehicle_gear-grid">
-                            <input class="expand" type="checkbox" name="attr_expand" data-i18n-title="show-hide" title="show/hide" /><span></span>
-                            <input class="vehicle_gear-box1 input" type="text" name="attr_vehicle_gear_name" value="" title="@{repeating_vehicle_gear_$X_vehicle_gear_name}" placeholder="item" />                           
-                            <input class="vehicle_gear-box2 input-number" type="number" name="attr_vehicle_gear_qty" value="1" title="Quantity @{repeating_vehicle_gear_$X_vehicle_gear_qty}" />
-                            <input class="vehicle_gear-box3 input" type="checkbox" name="attr_vehicle_gear_carried" value="1" title="@{repeating_vehicle_gear_$X_vehicle_gear_carried}" checked />
-                            <select class="vehicle_gear-box4 input" name="attr_vehicle_gear_weight" title="@{repeating_vehicle_gear_$X_vehicle_gear_weight}">
+                        <input class="display" name="attr_reveal" type="hidden" value="display,settings," />
+                        <div class="grid vehicle_gear-grid">
+                            <button class="toggles toggles-repeating" name="act_settings" type="action">y</button>
+                            <button class="collapse" name="act_collapse" type="action">
+                                <span name="attr_vehicle_gear_name"></span>
+                            </button>
+                            <span name="attr_vehicle_gear_qty"></span>
+                            <span name="attr_vehicle_gear_carried"></span>
+                            <span name="attr_vehicle_gear_weight"></span>
+                            <span class="collapsible" name="attr_vehicle_gear_description"></span>
+                        </div>
+                        <div class="grid settings vehicle_gear-grid">
+                            <input class="vehicle_gear-box1 input" type="text" name="attr_vehicle_gear_name" value="" title="@{repeating_vehicle_gear_$X_gear_name}" placeholder="item" />
+                            <input class="vehicle_gear-box2 input-number" type="number" name="attr_vehicle_gear_qty" value="1" min="0" title="@{repeating_vehicle_gear_$X_gear_qty}" />
+                            <input class="vehicle_gear-box3 input" type="checkbox" name="attr_vehicle_gear_carried" value="1" title="@{repeating_vehicle_gear_$X_gear_carried}" checked />
+                            <select class="vehicle_gear-box4 input" name="attr_vehicle_gear_weight" title="@{repeating_gear_$X_vehicle_gear_weight}">
                                 <option data-i18n="tiny-abbr" value="0" selected>T</option>
                                 <option data-i18n="light-abbr" value="0.5">L</option>
                                 <option data-i18n="normal-abbr" value="1">N</option>
                                 <option data-i18n="heavy-abbr" value="2">H</option>
                             </select>
-                            <textarea class="vehicle_gear-box5 input-textarea" name="attr_vehicle_gear_description" title="@{repeating_vehicle_gear_$X_vehicle_gear_description}" placeholder="description"></textarea>
+                            <textarea class="vehicle_gear-box5 input-textarea" name="attr_vehicle_gear_description" title="@{repeating_talents_$X_vehicle_gear_description}" placeholder="description"></textarea>
                         </div>
                     </fieldset>                    
                 </div>
@@ -1460,9 +1476,8 @@ on("change:armor1_equiped change:armor1_damage change:armor1_bonus change:armor2
         });
     });
     
-   //toggle off and on show settings
-   [`repeating_injuries:settings`, `repeating_talents:settings`, `repeating_talents:collapse`, "repeating_mutantions:settings", "repeating_mutantions:collapse",
-   "repeating_skills:settings", "repeating_gear:settings"].forEach((attr) => {
+   //toggle off and on show setting
+   ["repeating_injuries:settings", "repeating_talents:settings", "repeating_talents:collapse", "repeating_mutantions:settings", "repeating_mutantions:collapse", "repeating_skills:settings", "repeating_gear:settings", "repeating_gear:collapse","repeating_vehicle:collapse", "repeating_vehicle:settings"].forEach((attr) => {
         on(`clicked:${attr}`, (eventinfo) => {
             const word    = eventinfo.sourceAttribute.split("_")[3];
             const reveal  = eventinfo.sourceAttribute.replace(word, "reveal");
