--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -537,10 +537,10 @@
                 <div class="weapons-box3 column-header"><span data-i18n="grip">Grip</span></div>
                 <div class="weapons-box4 column-header"><span data-i18n="skill">Skill</span></div>
                 <div class="weapons-box5 column-header"><span data-i18n="bonus">Bonus</span></div>
-                <div class="weapons-box7 column-header"><span data-i18n="dmg-abbr">Dmg</span></div>
-                <div class="weapons-box8 column-header"><span data-i18n="range">Range</span></div>
-                <div class="weapons-box9 column-header"><span data-i18n="features">Features</span></div>
-                <div class="weapons-box10">
+                <div class="weapons-box6 column-header"><span data-i18n="dmg-abbr">Dmg</span></div>
+                <div class="weapons-box7 column-header"><span data-i18n="range">Range</span></div>
+                <div class="weapons-box8 column-header"><span data-i18n="features">Features</span></div>
+                <div class="weapons-box9">
                     <fieldset class="repeating_weapons">
                         <div class="weapons-grid">
                             <button class="weapons-box11 roll-button dicefontd6" type="action" name="act_attack-roll" title="Update Dice Pool">L</button>
@@ -552,7 +552,7 @@
                             </select>
                             <select class="weapons-box14 input" name="attr_weapon_skill" title="@{repeating_weapons_$X_weapon_skill}">
                                 <option value="0" selected data-i18n="fight">Fight</option>
-                                <option value="1" data-i18n="range">Range</option>
+                                <option value="1" data-i18n="shoot">Shoot</option>
                             </select>
                             <select class="weapons-box15 input" name="attr_weapon_bonus" title="@{repeating_weapons_$X_weapon_bonus}">
                                 <option value="0">0</option>
@@ -688,12 +688,14 @@
                             <div class="relationships-box4">
                                 <textarea class="input-textarea" name="attr_pc_description" title="@{repeating_relationships_$X_pc_description}" placeholder="Describe the relationship."></textarea>
                             </div>
+                            <input name="attr_buddy"  title="@{repeating_relationships_$X_buddy}" type="checkbox">
+                            <hr />
                         </div>
                     </fieldset>
                 </div>
-                <div>
+                <div class="relationships-grid">
                     <label data-i18n="i-hate">i hate:</label><input name="attr_hate" value="0" title="@{hate}" type="text" value="0" />
-                     <label data-i18n="i-protect">i need to protect:</label><input name="attr_protect" value="0" title="@{protect}" type="text" value="0" />
+                    <label data-i18n="i-protect">i need to protect:</label><input name="attr_protect" value="0" title="@{protect}" type="text" value="0" />
                     <label data-i18n="i-dream">my big dream:</label><input name="attr_dream" value="0" title="@{dream}" type="text" value="0" />
                 </div>
             </div>
