pc sheet nearly done

--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -1,5 +1,4 @@
-<!--4/14/19'-->
-<input type="hidden" name="attr_version" value="1.1">
+<input type="hidden" name="attr_version" value="1">
 <input class="tab" type="hidden" name="attr_tab" value="character">
 
 <!--tabs-->
@@ -679,25 +678,20 @@
                 <div class="relationships-box1 header">
                     <h1 data-i18n="relationships-u">RELATIONSHIPS</h1>
                 </div>
-                <div class="relationships-box2">
+                <div class="relationships-box2 column-header"><span data-i18n="buddy">Buddy</span></div>
+                <div class="relationships-box3">
                     <fieldset class="repeating_relationships">
                         <div class="relationships-grid">
-                            <div class="relationships-box3">
-                                <input class="input-number" type="text" name="attr_pc_name" value="" title="@{repeating_relationships_$X_pc_name}" placeholder="PC's name" />
-                            </div>
-                            <div class="relationships-box4">
-                                <textarea class="input-textarea" name="attr_pc_description" title="@{repeating_relationships_$X_pc_description}" placeholder="Describe the relationship."></textarea>
-                            </div>
-                            <input name="attr_buddy"  title="@{repeating_relationships_$X_buddy}" type="checkbox">
+                            <input class="input-number" type="text" name="attr_pc_name" value="" title="@{repeating_relationships_$X_pc_name}" placeholder="PC's name" />
+                            <textarea class="input-textarea" name="attr_pc_description" title="@{repeating_relationships_$X_pc_description}" placeholder="Describe the relationship."></textarea>
+                            <input name="attr_buddy"  title="@{repeating_relationships_$X_buddy}" type="checkbox"><span></span>
                             <hr />
                         </div>
                     </fieldset>
                 </div>
-                <div class="relationships-grid">
-                    <label data-i18n="i-hate">i hate:</label><input name="attr_hate" value="0" title="@{hate}" type="text" value="0" />
-                    <label data-i18n="i-protect">i need to protect:</label><input name="attr_protect" value="0" title="@{protect}" type="text" value="0" />
-                    <label data-i18n="i-dream">my big dream:</label><input name="attr_dream" value="0" title="@{dream}" type="text" value="0" />
-                </div>
+                <label data-i18n="i-hate">i hate:</label><input name="attr_hate" value="0" title="@{hate}" type="text" value="0" />
+                <label data-i18n="i-protect">i need to protect:</label><input name="attr_protect" value="0" title="@{protect}" type="text" value="0" />
+                <label data-i18n="i-dream">my big dream:</label><input name="attr_dream" value="0" title="@{dream}" type="text" value="0" />
             </div>
         </div>
         <div class="box character-notes">
@@ -708,12 +702,9 @@
                 <div class="notes-box2">
                     <fieldset class="repeating_notes">
                         <div class="notes-grid">
-                            <div class="notes-box3">
-                                <input class="input-number" type="text" name="attr_note_name" value="" title="@{repeating_notes_$X_note_name}" placeholder="Note's name" />
-                            </div>
-                            <div class="notes-box4">
-                                <textarea class="notes-box4 input-textarea" name="attr_note_description" title="@{repeating_notes_$X_note_description}" placeholder="Note's description."></textarea>
-                            </div>
+                            <input class="input-number" type="text" name="attr_note_name" value="" title="@{repeating_notes_$X_note_name}" placeholder="Note's name" />
+                            <textarea class="notes-box4 input-textarea" name="attr_note_description" title="@{repeating_notes_$X_note_description}" placeholder="Note's description."></textarea>
+                            <hr />
                         </div>
                     </fieldset>
                 </div>
