HSD2 V1.04: fixed exp tracker and mistakes on progression chart

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -4,7 +4,7 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Page 2"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="Page 3"></span>
 
-<span class="version bold">Sheet Version: 1.02</span>
+<span class="version bold">Sheet Version: 1.04</span>
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
 <!--  ------------------------------------------------- PAGE 1 -------------------------------------------------------------- -->
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
@@ -409,7 +409,7 @@
     <div>
       <span>2 Technq <input type="checkbox" name="attr_mind_stat6a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Notori. <input type="checkbox" name="attr_mind_stat6b"></span>
+      <span>2 Notoriety <input type="checkbox" name="attr_mind_stat6b"></span>
     </div>
 
     <div>
@@ -424,7 +424,7 @@
     <div>
       <span>2 Technq <input type="checkbox" name="attr_mind_stat9a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Notori. <input type="checkbox" name="attr_mind_stat9b"></span>
+      <span>2 Readiness <input type="checkbox" name="attr_mind_stat9b"></span>
     </div>
     <div>
       <input type="number" name="attr_stat4" value="4" class="txtfield" disabled="true">
@@ -438,7 +438,7 @@
     <div>
       <span>2 Technq <input type="checkbox" name="attr_mind_stat12a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Notori. <input type="checkbox" name="attr_mind_stat12b"></span>
+      <span>2 Readiness <input type="checkbox" name="attr_mind_stat12b"></span>
     </div>
     <div>
       <input type="number" name="attr_stat5" value="5" class="txtfield" disabled="true">
@@ -553,9 +553,9 @@
     </div>
 
     <div>
-      <span>2 Focus <input type="checkbox" name="attr_body_stat6a"></span>
+      <span>2 Notoriety <input type="checkbox" name="attr_body_stat6a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Readiness <input type="checkbox" name="attr_body_stat6b"></span>
+      <span>2 Boon <input type="checkbox" name="attr_body_stat6b"></span>
     </div>
 
     <div>
@@ -812,9 +812,9 @@
 <!-- XP Purchase Summary -->
 
   <div class="xp-summary section border">
-    <span class="bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TOTAL EXP: <input name="attr_exp_max" class="txtfield" type="number" value="210"></span>
-    <span class="bold">SPENT:         <input name="attr_exp"           class="txtfield" type="number" value="0"></span>
-    <span class="bold">REMAINING EXP: <input name="attr_exp_remaining" class="txtfield" type="number" value="@{exp_max} -@{exp}" disabled="true"></span>
+    <span class="bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TOTAL EXP: <input name="attr_exp_total" class="txtfield" type="number" value="210"></span>
+    <span class="bold">SPENT:         <input name="attr_exp_spent" class="txtfield" type="number" value="0"></span>
+    <span class="bold">REMAINING EXP: <input name="attr_exp"       class="txtfield" type="number" value="@{exp_total} -@{exp_spent}" disabled="true"></span>
     <hr>
     <label>Progression Purchase Tracking</label>
 
