HSD2 V1.05: Adjusted Techniques & Quirks sections to fit 9 rows each

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -4,7 +4,7 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Page 2"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="Page 3"></span>
 
-<span class="version bold">Sheet Version: 1.04</span>
+<span class="version bold">Sheet Version: 1.05</span>
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
 <!--  ------------------------------------------------- PAGE 1 -------------------------------------------------------------- -->
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
@@ -202,7 +202,7 @@
 <!--  SIMPLIFICATIOPNS & COMPLICATIONS -->
 
   <div class="comps section border flex-row">
-    <label>Simplifications</label> <label>Complications</label>
+    <span class="bold">Simplifications</span> <span class="bold">Complications</span>
     <input name="attr_simp1" type="text" placeholder="Simplification 1"> <input name="attr_comps1" type="text" placeholder="Complication 1">
     <input name="attr_simp2" type="text" placeholder="Simp 2">           <input name="attr_comps2" type="text" placeholder="Comp 2">
     <input name="attr_simp3" type="text" placeholder="Simp 3">           <input name="attr_comps3" type="text" placeholder="Comp 3">
@@ -212,7 +212,7 @@
 <!--  TECHNIQUES -->
 
   <div class="techq section border">
-    <label>Techniques -- Total:<input type="number" name="attr_techniques"> Spent: <input type="number" name="attr_techniques_spent"></label>
+    <span class="bold">Techniques -- Total:<input type="number" name="attr_techniques"> Spent: <input type="number" name="attr_techniques_spent"></span>
     <fieldset class="repeating_technique">
         <input name="attr_technique" type="text" placeholder="Technique 1">
     </fieldset>
@@ -221,7 +221,7 @@
 <!--  QUIRKS -->
 
   <div class="quirks section border">
-    <label>Personal quirks and abilities</label>
+    <span class="bold">Personal quirks and abilities</span>
     <fieldset class="repeating_quirks">
         <input name="attr_quirk" type="text"  placeholder="Quirk 1">
         <span class="bold">p.(<input name="attr_quirk_source" type="number" class="ref">)</span>
